Task5/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: front-end-app
  labels:
    role: front-end 
spec:
  containers:
    - name: nginx
      image: nginx:latest
      ports:
        - containerPort: 80
        - containerPort: 443
---
apiVersion: v1
kind: Pod
metadata:
  name: back-end-api-app
  labels:
    role: back-end-api 
spec:
  containers:
    - name: nginx
      image: nginx:latest
      ports:
        - containerPort: 80
        - containerPort: 443
---
apiVersion: v1
kind: Pod
metadata:
  name: admin-front-end-app
  labels:
    role: admin-front-end 
spec:
  containers:
    - name: nginx
      image: nginx:latest
      ports:
        - containerPort: 80
        - containerPort: 443
---
apiVersion: v1
kind: Pod
metadata:
  name: admin-back-end-api-app
  labels:
    role: admin-back-end-api 
spec:
  containers:
    - name: nginx
      image: nginx:latest
      ports:
        - containerPort: 80
        - containerPort: 443
---
